Player server udpates are now even more performant. Added new parallax background from rawb

--- a/client/src/public/index.css
+++ b/client/src/public/index.css
@@ -32,7 +32,7 @@ html,body,#snakeymouse {
 
 #name-input {
   pointer-events: all;
-  width: 25vw;
+  width: 320px;
   height: 32px;
   border: 1px solid #999999;
   background-color: #fefefe;
